# lernos

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
lernos/: __init__.py  cli.py  completion_helpers.py  ui.py
lernos/cmd/: add.py  anki.py  backup.py  completion.py  doc.py  edit.py  misc.py  review.py  search.py  setup.py  undo.py
lernos/db/: schema.py  stats.py  topics.py
lernos/fuzzy/: resolve.py
lernos/graph/: export_html.py  export_review.py  topo.py
lernos/ollama/: embed.py
lernos/pdf/: json_utils.py  ollama_client.py  questions.py  reader.py  vision.py
lernos/sm2/: algorithm.py  cascade.py
tests/: conftest.py  test_lernos.py  test_pdf_pipeline.py  test_schema_and_pipeline.py
