[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lernos"
version = "1.8.6"
description = "Intelligentes Lern-Betriebssystem — Spaced Repetition + Wissensgraph"
readme = "README.md"
requires-python = ">=3.10"

# Kern-Abhängigkeiten — müssen beim Start vorhanden sein
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "colorama>=0.4",
    "pdfplumber>=0.9",
    "pdfminer.six>=20221105",
    "Pillow>=9.0",
    "pdf2image>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
lernos = "lernos.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
